@@ -131,7 +131,7 @@
         </widget>
        </item>
        <item row="4" column="1">
-        <widget class="QCheckBox" name="overwrite">
+        <widget class="OnOffButton" name="overwrite">
          <property name="text">
           <string/>
          </property>
@@ -325,6 +325,11 @@
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>OnOffButton</class>
+   <extends>QCheckBox</extends>
+   <header>onoffbutton.h</header>
+  </customwidget>
   <customwidget>
    <class>CapacityBar</class>
    <extends>QProgressBar</extends>
