@@ -31,7 +31,7 @@
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QCheckBox" name="systemTrayCheckBox">
+    <widget class="OnOffButton" name="systemTrayCheckBox">
      <property name="enabled">
       <bool>true</bool>
      </property>
@@ -51,7 +51,7 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QCheckBox" name="systemTrayPopup">
+    <widget class="OnOffButton" name="systemTrayPopup">
      <property name="text">
       <string/>
      </property>
@@ -68,7 +68,7 @@
     </widget>
    </item>
    <item row="2" column="1">
-    <widget class="QCheckBox" name="mpris">
+    <widget class="OnOffButton" name="mpris">
      <property name="text">
       <string/>
      </property>
@@ -85,7 +85,7 @@
     </widget>
    </item>
    <item row="3" column="1">
-    <widget class="QCheckBox" name="dockManager">
+    <widget class="OnOffButton" name="dockManager">
      <property name="text">
       <string/>
      </property>
@@ -94,6 +94,11 @@
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>OnOffButton</class>
+   <extends>QCheckBox</extends>
+   <header>onoffbutton.h</header>
+  </customwidget>
   <customwidget>
    <class>BuddyLabel</class>
    <extends>QLabel</extends>
