@@ -27,7 +27,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QCheckBox" name="enableHttp">
+      <widget class="OnOffButton" name="enableHttp">
        <property name="text">
         <string/>
        </property>
@@ -44,7 +44,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QCheckBox" name="alwaysUseHttp">
+      <widget class="OnOffButton" name="alwaysUseHttp">
        <property name="text">
         <string/>
        </property>
@@ -128,6 +128,11 @@
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>OnOffButton</class>
+   <extends>QCheckBox</extends>
+   <header>onoffbutton.h</header>
+  </customwidget>
   <customwidget>
    <class>LineEdit</class>
    <extends>QLineEdit</extends>
