@@ -41,7 +41,7 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QCheckBox" name="stopOnExit"/>
+    <widget class="OnOffButton" name="stopOnExit"/>
    </item>
    <item row="2" column="0">
     <widget class="BuddyLabel" name="stopDynamizerOnExitLabel">
@@ -54,7 +54,7 @@
     </widget>
    </item>
    <item row="2" column="1">
-    <widget class="QCheckBox" name="stopDynamizerOnExit">
+    <widget class="OnOffButton" name="stopDynamizerOnExit">
      <property name="text">
       <string/>
      </property>
@@ -67,6 +67,11 @@
    <class>BuddyLabel</class>
    <extends>QLabel</extends>
    <header>buddylabel.h</header>
+  </customwidget>
+  <customwidget>
+   <class>OnOffButton</class>
+   <extends>QCheckBox</extends>
+   <header>onoffbutton.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
